[package]
name = "ooecs"
version = "0.0.2"
edition = "2024"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Object-oriented entity-component-system."
readme = "README.md"
documentation = "https://docs.rs/ooecs/"
keywords = ["ecs", "oop", "tree", "graph", "entity"]
categories = ["data-structures", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/rust-ooecs"

[dependencies]
arena-container = "0.0.2"
panicking = "0.7.0"

[dev-dependencies]
basic-oop = "0.8.2"

[badges]
maintenance = { status = "actively-developed" }
