[package]
name = "ooecs"
version = "0.1.1"
edition = "2024"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Object-oriented entity-component-system."
readme = "README.md"
documentation = "https://docs.rs/ooecs/"
keywords = ["ecs", "oop", "tree", "graph", "entity"]
categories = ["data-structures", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/rust-ooecs"

[dependencies]
components-arena = "4.2.3"
educe = "0.6.0"
macro-attr-2018 = "3.0.1"
panicking = "0.7.0"
phantom-type = { version = "0.5.2", default-features = false }

[dev-dependencies]
basic-oop = "0.8.2"

[badges]
maintenance = { status = "actively-developed" }
